update des events et suppression

--- a/Rendev/Rendev/Rendev.csproj
+++ b/Rendev/Rendev/Rendev.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Category.cs" />
     <Compile Include="ConnectionBD.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="DataManager.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="frmAddModif.cs">
       <SubType>Form</SubType>
@@ -103,6 +104,7 @@
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </Compile>
     <Compile Include="Map.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmAddModif.resx">
